Criando Componente ButtonIcon

--- a/ToDo/src/index.css
+++ b/ToDo/src/index.css
@@ -9,7 +9,7 @@
     --color-gray-400: #332e32;
 
     --color-green-light: #cddfcc;
-    --color-green-base: #2f5c2d;
+    --color-green-base: #52a350;
     --color-green-dark: #2f5c2d;
 
     --color-pink-light: #e9cce1;
